# adcm

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .npmcheckignore  .pre-commit-config.yaml  CODEOWNERS  COPYRIGHT  Dockerfile  Dockerfile_base  LICENSE  Makefile  README.md  annotation.txt  config.json  docker-compose.yml  extended_legacy.yaml  gues_version.sh  init-user-db.sh  init_db.py  job_runner.py  licence_checker.py  license_checker.py  manage.py  masking.yaml  masking_v2.yaml  pylintrc  pyproject.toml  pytest.sh  requirements-ansible.txt  requirements-test.txt  requirements-venv-2.9.txt  requirements-venv-default.txt  requirements.txt  simplified_masking.yaml  task_runner.py  venv.sh
.dependabot/: config.yml
.github/: CODEOWNERS
.github/workflows/: codeql.yml
adcm/: settings.py  urls.py
adcm-web/: docker-compose.test.yml
adcm-web/app/: .editorconfig  .env.development  .env.testing  .eslintrc.cjs  .eslintrc.json  .gitignore  .lintstagedrc.js  .oxlintrc-precommit.json  README.md  babel.config.json  biome.json  biome.jsonc  bm.json  build.sh  eslint-spellcheck.config.js  eslint.config.mjs  index.html  jest.config.json  json-schema.json  oxlint.schema.json  package.json  tsconfig.json  tsconfig.paths.json  vite.config.ts
api/: apps.py  cluster_serial.py  cluster_views.py  docs.py  serializers.py  stack_serial.py  stack_views.py  urls.py  views.py
assemble/app/: Dockerfile  build_venv.sh
assemble/base/: Dockerfile  build.sh  requirements-base.txt
assemble/cloud/: Dockerfile
cm/: adcm_config.py  admin.py  ansible_plugin.py  api.py  apps.py  bundle.py  config.py  daemon.py  errors.py  inventory.py  issue.py  job.py  models.py  stack.py  tests.py  tests_adcm_config.py  tests_api.py  tests_inventory.py  tests_job.py  tests_runner.py  upgrade.py
cm/migrations/: 0001_initial.py  0004_auto_20180914_1042.py  0005_auto_20180928_0945.py  0006_auto_20181009_1135.py  0009_auto_20181113_1112.py  0010_auto_20181212_1213.py  0011_auto_20181220_1327.py  0012_auto_20181226_0926.py  0016_auto_20190218_1214.py  0018_auto_20190220_1101.py  0020_auto_20190321_1126.py  0022_auto_20190620_1251.py  0023_auto_20190624_1441.py  0025_auto_20190719_1036.py  0026_auto_20190805_1442.py  0027_auto_20190809_1134.py  0031_auto_20190926_1600.py  0033_auto_20191023_1459.py  0035_auto_20191031_1600.py  0040_auto_20191218_1358.py  0041_auto_20191220_1338.py  0042_auto_20191225_1148.py  0043_auto_20200109_1600.py  0044_auto_20200115_1058.py  0045_auto_20200120_1417.py  0045_dummydata.py  0046_auto_20200120_1417.py
cm/templates/: index.html  ws.html
conf/: 30-status.conf  status.service
conf/adcm/: config.yaml
conf/nginx/: adcm.conf
data/conf/: secret_key.txt
data/download/: .gitignore  adb.2.6.tar  ssh.1.3.tar
dev/linters/: license_checker.py  migrations_checker.py
dev/profiling/: README.md
go/: .golangci.yml  Makefile
go/adcm/: go.mod  runstatus.go
os/etc/: adcmenv  logrotate.conf  startup.sh
python/: ansible_secret.py  backupdb.py  check_adcm_bundle.py  check_adcm_config.py  drf_docs.py  init_db.py  jinja_config.py  job_runner.py  job_venv_wrapper.sh  logrotate.py  manage.py  pytest.ini  run_unit.sh  server.sh  task_runner.py  utils.py
python/adcm/: api_schema.py  api_schema.yaml  auth_backend.py  custom_loggers.py  dev.py  feature_flags.py  filters.py  init_django.py  mixins.py  permissions.py  serializers.py  settings.py  settings_utils.py  silk_urls.py  test.py  urls.py  utils.py  views.py  with_silk.py  wsgi.py
python/ansible_plugin/: base.py  errors.py  maintenance_mode.py  messages.py  utils.py
python/api/: api_views.py  apps.py  base_serializers.py  base_view.py  cluster_serial.py  cluster_views.py  config_views.py  docs.py  job_serial.py  job_views.py  serializers.py  stack_serial.py  stack_views.py  urls.py  user_views.py  utils.py  validators.py  views.py
python/api_ui/: urls.py  views.py
python/api_v2/: api_schema.py  apps.py  filters.py  serializers.py  urls.py  views.py
python/audit/: apps.py  cef_logger.py  filters.py  middleware.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
python/cm/: __init__.py  adcm_config.py  adcm_schema.yaml  admin.py  ansible_plugin.py  api.py  api_context.py  apps.py  bundle.py  checker.py  config.py  converters.py  daemon.py  data_containers.py  data_transfer.py  db_routers.py  errors.py  flag.py  hierarchy.py  inventory.py  issue.py  job.py  lock.py  log.py  logger.py  lookups.py  maintenance_mode.py  models.py  role.py  role.yaml  role_schema.yaml  role_spec.yaml  schemas.py  search_indexes.py  signal_callbacks.py  signals.py  stack.py  status_api.py  tests.py  tests_adcm_config.py  (+15 more)
python/core/: __init__.py  converters.py  errors.py  types.py
python/rbac/: __init__.py  apps.py  ldap.py  models.py  role_schema.yaml  role_spec.yaml  roles.py  root.py  settings.py  signals.py  upgrade_role.py  urls.py  urls_ui.py  utils.py  validators.py  viewsets.py
runner_tests/: tests.py
sdk/: setup.py
sdk/adcm_client/: base.py  objects.py
spec/: conf.py  index.rst  objects.rst  rbac.md
spec/system/: components.rst  index.rst
spec/ui/: actions.rst  elements.rst  index.rst
spec/usecase/: glossary.rst  index.rst
tests/: __init__.py  conftest.py  pylintrc  pyproject.toml  pytest.ini  run_test.sh  settings.py  test_api.py  test_status.py  upgrade_utils.py
tests/api/: __init__.py  conftest.py  pytest.ini  test_filtering.py  test_methods.py  test_ordering.py  test_urls.py
tests/base/: .gitignore  run_test.sh  settings.py  test_api.py  test_status.py
tests/functional/: __init__.py  conftest.py  docker_utils.py  plugin_utils.py  test_action_config.py  test_actions.py  test_actions_on_host.py  test_adcm_check_plugin.py  test_adcm_client_compability.py  test_adcm_upgrade.py  test_allow_to_terminate.py  (+61 more)
web/: .gitignore  .prettierrc  Dockerfile  README.md  angular.json  build.sh  build_static.sh  documentation.json  karma.conf.js  ng_test.sh  npm_check.sh  package-lock.json  package.json  protractor.conf.js  proxy.conf.json  storybook.sh  tsconfig.base.json  tsconfig.json  tslint.json
(+7062 files in other folders)
